--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "removebackgroundsuite"
 description = "A matting toolkit based on ComfyUI, supporting multiple matting models and detail processing methods."
-version = "1.0.0"
+version = "1.1.0"
 license = {file = "LICENSE"}
-dependencies = ["torch>=2.0.0", "numpy>=1.24.0", "Pillow>=9.0.0", "torchvision>=0.15.0", "opencv-python>=4.8.0", "scipy>=1.10.0", "transformers>=4.30.0", "huggingface-hub>=0.16.0", "tqdm>=4.65.0"]
+dependencies = ["torch", "numpy", "Pillow", "torchvision", "opencv-python", "scipy", "transformers", "tqdm"]
 
 [project.urls]
 Repository = "https://github.com/whmc76/ComfyUI-RemoveBackgroundSuite"
