chore: add publisher id (whmc76) to pyproject.toml for Comfy Registry

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ Repository = "https://github.com/whmc76/ComfyUI-RemoveBackgroundSuite"
 #  Used by Comfy Registry https://registry.comfy.org
 
 [tool.comfy]
-PublisherId = ""
+PublisherId = "whmc76"
 DisplayName = "ComfyUI-RemoveBackgroundSuite"
 Icon = ""
 includes = []
