docs: 更新ComfyUI插件版本信息和配置
- 在pyproject.toml中添加详细的插件描述和标签
- 在README.md顶部添加版本信息
- 完善ComfyUI Registry的插件元数据
- 添加相关标签：matting, background-removal, image-processing, mask-processing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,8 @@ Repository = "https://github.com/whmc76/ComfyUI-RemoveBackgroundSuite"
 [tool.comfy]
 PublisherId = "whmc76"
 DisplayName = "ComfyUI-RemoveBackgroundSuite"
+Description = "A comprehensive matting toolkit for ComfyUI with support for multiple models including BiRefNet, RMBG, and advanced mask processing capabilities."
+Version = "1.2.0"
 Icon = ""
 includes = []
+tags = ["matting", "background-removal", "image-processing", "mask-processing"]
